Replace curves index in milliseconds with pandas Timestamp
Signed-off-by: lisrte <laurent.issertial_externe@rte-france.com>